[metadata]
name = qmake2cmake
version = 1.0.2
description = QMake to CMake project file converter
url = https://wiki.qt.io/qmake2cmake
download_url = https://download.qt.io/
license = GPLv3
license_files = LICENSE.GPL3
author = The Qt Company
long_description = file: README.md
long_description_content_type = text/markdown
keywords=qmake, cmake, development
ext_modules = None
projects_urls =
    Bug Tracker = https://bugreports.qt.io
    Source = https://codereview.qt-project.org/admin/repos/qt/qmake2cmake
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.7
install_requires =
    pyparsing
    portalocker
    sympy
    packaging

[options.packages.find]
where = src

[options.extras_require]
dev =
    mypy
    flake8
    black
test =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    qmake2cmake = qmake2cmake.pro2cmake:main
    qmake2cmake_all = qmake2cmake.run_pro2cmake:main
